<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/simon_game"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintOverlap" />

    <GridLayout
        android:id="@+id/colorGrid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnCount="2"
        android:rowCount="3"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        app:layout_constraintBottom_toTopOf="@id/sequenceText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/btnRed"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/red"
            android:padding="12dp"
            android:text="@string/red"
            android:textColor="#000000"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btnGreen"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/green"
            android:padding="12dp"
            android:text="@string/green"
            android:textColor="#000000"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btnBlue"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/blue"
            android:padding="12dp"
            android:text="@string/blue"
            android:textColor="#B0BEC5"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btnMagenta"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/magenta"
            android:padding="12dp"
            android:text="@string/magenta"
            android:textColor="#000000"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btnYellow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/yellow"
            android:padding="12dp"
            android:text="@string/yellow"
            android:textColor="#000000"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btnCyan"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/cyan"
            android:padding="12dp"
            android:text="@string/cyan"
            android:textColor="#000000"
            tools:ignore="VisualLintButtonSize" />

    </GridLayout>

    <TextView
        android:id="@+id/sequenceText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/colorGrid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonArea"/>

    <LinearLayout
        android:id="@+id/buttonArea"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/sequenceText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnClear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Clear"
            tools:ignore="VisualLintButtonSize">

        </Button>

        <Button
            android:id="@+id/btnEnd"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fine_partita"
            tools:ignore="VisualLintButtonSize">

        </Button>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>